qoute wrap-mode fixed

--- a/src/app/result-style.css
+++ b/src/app/result-style.css
@@ -58,8 +58,10 @@
 
     .quote {
         top: 5%;
-        left: 50%;
+        left: 5%;
         font-size: 3em;
         width: 90%;
+        text-wrap: wrap;
+        word-wrap: anywhere;
     }
 }
